change banner position

--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -1,13 +1,12 @@
 /* banner section */
 .banner__section {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-around;
 }
 
 /* banner left section */
 .banner__left__section {
-  margin-top: 100px;
   width: 45%;
 }
 .banner__left__section > h1 {
@@ -17,14 +16,14 @@
 }
 .banner__left__section > p {
   color: #999999;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   font-weight: bold;
   margin-top: 70px;
 }
 
 /* banner right section */
 .banner__right__section {
-  width: 40%;
+  width: 35%;
 }
 .banner__right__section > img {
   width: 100%;
@@ -33,24 +32,25 @@
 
 /* banner form */
 .banner__form {
-  padding: 40px 50px;
+  padding: 50px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.1);
-  width: 80%;
+  width: 90%;
   border-radius: 10px;
-  transform: translateY(-230px);
   background-color: #fff;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 70px;
 }
 .banner__form > form {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-around;
 }
 .banner__form > form > div {
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  margin-right: 80px;
 }
 .banner__form > form > div > label {
   font-size: 1.3rem;
@@ -70,7 +70,7 @@
   font-size: 1.15rem;
 }
 .banner__form > form > button {
-  padding: 15px 50px;
+  padding: 15px 60px;
   background-color: #000;
   color: #fff;
   cursor: pointer;
