--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -15,6 +15,8 @@
   line-height: 1.5;
   border-left: #fb3640 10px solid;
   padding-left: 25px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
 }
 .banner__left__section > p {
   color: #999999;
