--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -4,8 +4,6 @@
   align-items: center;
   justify-content: space-around;
 }
-
-/* banner left section */
 .banner__left__section {
   width: 45%;
 }
@@ -24,8 +22,6 @@
   font-weight: bold;
   margin-top: 70px;
 }
-
-/* banner right section */
 .banner__right__section {
   width: 35%;
 }
@@ -99,18 +95,17 @@
 
 /* feature section */
 .feature__section {
-  margin: 180px 0;
+  margin-top: 200px;
   text-align: center;
 }
 .feature__section > h1 {
   font-family: "Noto Serif", serif;
-  font-size: 2rem;
+  font-size: 1.8rem;
   border-bottom: 5px solid #fb3640;
   padding-bottom: 10px;
   display: inline-block;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  word-spacing: 2px;
 }
 
 .feature__section > .features {
@@ -120,7 +115,7 @@
 }
 .feature__section > .features > div {
   width: 30%;
-  margin-top: 80px;
+  margin-top: 100px;
 }
 .feature__section > .features > div > img {
   width: 50%;
@@ -135,4 +130,68 @@
   font-size: 1.2rem;
   margin: 25px auto 0;
   width: 80%;
+}
+
+/* popular destination section */
+.popular__destination__section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 200px;
+}
+.popular__destination__section > .left__side {
+  width: 40%;
+}
+.popular__destination__section > .left__side > h1 {
+  font-family: "Noto Serif", serif;
+  font-size: 4.5rem;
+  border-left: #fb3640 10px solid;
+  padding-left: 30px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.popular__destination__section > .right__side {
+  width: 35%;
+  position: relative;
+}
+.slider__img {
+  width: 100%;
+  height: 350px;
+}
+.slider__text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 2.5rem;
+  padding: 20px 50px;
+  background: rgba(0, 0, 0, 0.4);
+  border-radius: 5px;
+}
+
+/* popular hotel section */
+.popular__hotel__section {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 180px;
+  margin-bottom: 200px;
+}
+.popular__hotel__section > h1 {
+  font-family: "Noto Serif", serif;
+  font-size: 1.8rem;
+  margin: auto;
+  border-bottom: 5px solid #fb3640;
+  padding-bottom: 10px;
+  display: inline-block;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.popular__hotel__section > div {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+  margin-top: 70px;
 }
