--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -144,7 +144,7 @@
 }
 .popular__destination__section > .left__side > h1 {
   font-family: "Noto Serif", serif;
-  font-size: 4.5rem;
+  font-size: 4rem;
   border-left: #fb3640 10px solid;
   padding-left: 30px;
   border-top-left-radius: 10px;
@@ -170,8 +170,8 @@
   border-radius: 5px;
 }
 
-/* popular hotel section */
-.popular__hotel__section {
+/* best deal section */
+.best__deal__section {
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -179,7 +179,7 @@
   margin-top: 180px;
   margin-bottom: 200px;
 }
-.popular__hotel__section > h1 {
+.best__deal__section > h1 {
   font-family: "Noto Serif", serif;
   font-size: 1.8rem;
   margin: auto;
@@ -189,7 +189,7 @@
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-.popular__hotel__section > div {
+.best__deal__section > div {
   display: flex;
   align-items: flex-start;
   justify-content: space-around;
