--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  margin-top: 50px;
 }
 .banner__left__section {
   width: 45%;
@@ -153,6 +154,7 @@
 .popular__destination__section > .right__side {
   width: 35%;
   position: relative;
+  z-index: -1;
 }
 .slider__img {
   width: 100%;
