--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,7 @@
 
 /* main section */
 .main__section {
-  max-width: 1500px;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 /* other page */
@@ -25,4 +22,11 @@
   height: 80vh;
   font-weight: bold;
   font-size: 2rem;
+}
+
+/* media query 1200px */
+@media only screen and (min-width: 1200px) {
+  .main__section {
+    padding: 0 200px;
+  }
 }
