--- a/src/Css/CatagoryCard.css
+++ b/src/Css/CatagoryCard.css
@@ -41,3 +41,19 @@
 .catagory__card:hover h1 {
   color: #fb3640;
 }
+
+/* 1024 screen */
+@media only screen and (max-width: 1024px) {
+  .catagory__card {
+    width: 32%;
+    margin: 30px;
+  }
+}
+
+/* 768 screen */
+@media only screen and (max-width: 768px) {
+  .catagory__card {
+    width: 37%;
+    margin: 30px;
+  }
+}
