--- a/src/Css/CatagoryCard.css
+++ b/src/Css/CatagoryCard.css
@@ -57,3 +57,11 @@
     margin: 30px;
   }
 }
+
+/* 480 screen */
+@media only screen and (max-width: 480px) {
+  .catagory__card {
+    width: 65%;
+    margin: 20px 0 30px;
+  }
+}
