--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -69,7 +69,32 @@
   .footer__section {
     padding: 80px 0 50px;
   }
+  .footer__section > .footer {
+    align-items: center;
+    flex-direction: column;
+  }
+  .footer__section > .footer > .left__side__footer {
+    width: 70%;
+  }
   .footer__section > .footer > .right__side__footer {
-    width: 80%;
+    text-align: center;
+    margin-top: 40px;
+  }
+  .footer__section > p {
+    margin-top: 80px;
+  }
+}
+
+/* 480 screen */
+@media only screen and (max-width: 480px) {
+  .footer__section > .footer {
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .footer__section > .footer > .right__side__footer {
+    margin: 30px auto;
+  }
+  .footer__section > p {
+    margin-top: 70px;
   }
 }
