--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -349,3 +349,71 @@
     margin-top: 35px;
   }
 }
+
+/* 480 screen */
+@media only screen and (max-width: 480px) {
+  /* banner section */
+  .banner__section {
+    margin: 0;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 50px 30px;
+  }
+  .banner__left__section {
+    width: 100%;
+  }
+  .banner__left__section > h1 {
+    font-size: 2rem;
+    border: none;
+    padding: 0;
+  }
+  .banner__left__section > p {
+    margin-top: 20px;
+  }
+  .banner__right__section {
+    width: 80%;
+    margin-top: 30px;
+  }
+
+  /* banner form */
+  .banner__form {
+    width: 80%;
+    margin-left: 40px;
+    margin-top: 30px;
+  }
+
+  /* feature section */
+  .feature__section {
+    margin-top: 100px;
+  }
+  .feature__section > .features > div {
+    width: 70%;
+    margin-top: 75px;
+  }
+
+  /* popular destination section */
+  .popular__destination__section {
+    margin-left: 0;
+    margin-top: 100px;
+    align-items: center;
+    justify-content: center;
+  }
+  .popular__destination__section > .left__side {
+    width: 100%;
+  }
+  .popular__destination__section > .left__side > h1 {
+    font-size: 2rem;
+    margin-bottom: 30px;
+    text-align: center;
+    padding: 0;
+    border: none;
+  }
+  .popular__destination__section > .right__side {
+    width: 75%;
+  }
+
+  /* best deal section */
+  .best__deal__section {
+    margin: 130px 0;
+  }
+}
