--- a/src/Css/FooterLinks.css
+++ b/src/Css/FooterLinks.css
@@ -22,3 +22,10 @@
     margin: 0 10px 40px;
   }
 }
+
+/* 480 screen */
+@media only screen and (max-width: 480px) {
+  .footer__links {
+    width: 100%;
+  }
+}
