--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -394,7 +394,7 @@
   /* popular destination section */
   .popular__destination__section {
     margin-left: 0;
-    margin-top: 100px;
+    margin-top: 80px;
     align-items: center;
     justify-content: center;
   }
@@ -414,6 +414,82 @@
 
   /* best deal section */
   .best__deal__section {
-    margin: 130px 0;
+    margin: 110px 0;
+  }
+  .best__deal__section > div {
+    margin-top: 30px;
+  }
+}
+
+/* 360 screen */
+@media only screen and (max-width: 360px) {
+  /* banner section */
+  .banner__left__section > h1 {
+    font-size: 1.7rem;
+    text-align: center;
+  }
+  .banner__left__section > p {
+    margin-top: 30px;
+    text-align: center;
+  }
+  .banner__right__section {
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  /* banner form */
+  .banner__form {
+    width: 90%;
+    margin: 20px auto 0;
+  }
+
+  /* catagory section */
+  .catagory__section {
+    margin-top: 80px;
+  }
+
+  /* feature section */
+  .feature__section {
+    margin-top: 90px;
+  }
+  .feature__section > h1 {
+    font-size: 1.4rem;
+    margin-bottom: 10px;
+  }
+  .feature__section > .features > div {
+    width: 80%;
+    margin-top: 50px;
+  }
+
+  /* popular destination section */
+  .popular__destination__section {
+    margin-top: 80px;
+  }
+  .popular__destination__section > .left__side > h1 {
+    font-size: 1.7rem;
+    margin-bottom: 30px;
+    text-align: center;
+    padding: 0;
+    border: none;
+  }
+  .popular__destination__section > .right__side {
+    width: 85%;
+  }
+  .slider__img {
+    height: 200px;
+  }
+  .slider__text {
+    font-size: 1.5rem;
+  }
+
+  /* best deal section */
+  .best__deal__section {
+    margin: 100px 0 130px;
+  }
+  .best__deal__section > h1 {
+    font-size: 1.4rem;
+  }
+  .best__deal__section > div {
+    margin-top: 25px;
   }
 }
