--- a/src/Css/PopularHotelCard.css
+++ b/src/Css/PopularHotelCard.css
@@ -70,3 +70,11 @@
     margin: 20px 0 30px;
   }
 }
+
+/* 360 screen */
+@media only screen and (max-width: 360px) {
+  .popular__hotel__card {
+    width: 80%;
+    margin: 20px 0;
+  }
+}
