increase width of best deals card

--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -195,7 +195,7 @@
 .best__deal__section > div {
   display: flex;
   align-items: flex-start;
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 70px;
 }
 
